# SLP-Course-project

./: CMakeLists.txt  README.md  frontend_jni_PSMoveManager.h  lib.c  main.c  main.h  move.c  move.h
src/: frontend_jni_JniHelper.h  lib.c  move.c  move.h  recognizer.c  recognizer.h
src/c/: lib.c  move.h  recognizer.c
src/java/frontend/: Main.java  paint.fxml
src/java/frontend/controller/: PaintController.java
src/java/frontend/jni/: JniHelper.java
src/java/frontend/utils/: Point.java
